--- a/F/F/Base.lproj/Main.storyboard
+++ b/F/F/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9525.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
         <!--登陆-->
@@ -15,21 +16,21 @@
                         <viewControllerLayoutGuide type="bottom" id="JZe-ZR-pzb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="oQx-jE-W15">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="icU-re-60l">
-                                <rect key="frame" x="20" y="99" width="355" height="30"/>
+                                <rect key="frame" x="20" y="20" width="355" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="QmG-xz-hYE">
-                                <rect key="frame" x="20" y="144" width="355" height="30"/>
+                                <rect key="frame" x="20" y="75" width="355" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" spellCheckingType="no" keyboardAppearance="alert" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zjl-Nw-lab">
-                                <rect key="frame" x="20" y="194" width="42" height="30"/>
+                                <rect key="frame" x="20" y="120" width="42" height="30"/>
                                 <state key="normal" title="Log in"/>
                                 <connections>
                                     <action selector="tapLoginButton:" destination="B3k-yu-deu" eventType="touchUpInside" id="k6i-g6-Wnv"/>
@@ -38,8 +39,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="登陆" id="BcL-QZ-B3X">
-                        <barButtonItem key="leftBarButtonItem" title="关闭" id="VvO-bS-flb"/>
+                        <barButtonItem key="leftBarButtonItem" title="关闭" id="VvO-bS-flb">
+                            <connections>
+                                <action selector="tapCloseButton:" destination="B3k-yu-deu" id="xka-Nq-ESo"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="注册" id="dDt-K9-gAT">
                             <connections>
                                 <segue destination="nfy-HA-Gcd" kind="show" id="wL8-og-cWS"/>
@@ -56,7 +62,7 @@
             </objects>
             <point key="canvasLocation" x="1085" y="902"/>
         </scene>
-        <!--Register-->
+        <!--注册-->
         <scene sceneID="nVE-f5-qQb">
             <objects>
                 <viewController id="nfy-HA-Gcd" customClass="Register" customModule="F" customModuleProvider="target" sceneMemberID="viewController">
@@ -65,26 +71,26 @@
                         <viewControllerLayoutGuide type="bottom" id="vUr-Kr-wbC"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="6sZ-4h-mxu">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ErC-Nd-h0W">
-                                <rect key="frame" x="20" y="89" width="355" height="30"/>
+                                <rect key="frame" x="20" y="28" width="355" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TvE-SW-3dX">
-                                <rect key="frame" x="20" y="134" width="355" height="30"/>
+                                <rect key="frame" x="20" y="73" width="355" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="bE8-Mr-eeb">
-                                <rect key="frame" x="20" y="179" width="355" height="30"/>
+                                <rect key="frame" x="20" y="118" width="355" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" spellCheckingType="no" keyboardAppearance="alert" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x3E-5S-PNq">
-                                <rect key="frame" x="20" y="217" width="57" height="30"/>
+                                <rect key="frame" x="20" y="156" width="57" height="30"/>
                                 <state key="normal" title="Register"/>
                                 <connections>
                                     <action selector="tapRegisterButton:" destination="nfy-HA-Gcd" eventType="touchUpInside" id="X72-TG-KOA"/>
@@ -93,6 +99,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <navigationItem key="navigationItem" title="注册" id="XFD-tM-oAK"/>
                     <connections>
                         <outlet property="emailTextField" destination="ErC-Nd-h0W" id="nVW-Vb-Llm"/>
                         <outlet property="nameTextField" destination="TvE-SW-3dX" id="bfv-dl-OLb"/>
@@ -101,13 +109,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="knb-Xq-o2u" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationBar contentMode="scaleToFill" id="Q2z-Sn-96S">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <items>
-                        <navigationItem title="注册" id="Z3i-5t-Fb0"/>
-                    </items>
-                </navigationBar>
             </objects>
             <point key="canvasLocation" x="1828" y="902"/>
         </scene>
@@ -120,7 +121,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="B3k-yu-deu" kind="relationship" relationship="rootViewController" id="8MA-JC-GUO"/>
+                        <segue destination="B3k-yu-deu" kind="relationship" relationship="rootViewController" id="xBD-LE-AEn"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xGV-vC-KEQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -150,7 +151,16 @@
                             <outlet property="delegate" destination="Wmm-Wb-Lem" id="7rx-aD-FqB"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="2dI-oR-LEi"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="2dI-oR-LEi">
+                        <leftBarButtonItems>
+                            <barButtonItem title="Item" systemItem="refresh" id="7gX-CI-jce"/>
+                            <barButtonItem title="Users" id="Eto-nQ-KRm">
+                                <connections>
+                                    <segue destination="32C-fu-Sb8" kind="show" id="9GH-NW-1S6"/>
+                                </connections>
+                            </barButtonItem>
+                        </leftBarButtonItems>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gnz-5P-ITd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -533,7 +543,42 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c2u-lG-Hoc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="264" y="-673"/>
+            <point key="canvasLocation" x="264" y="-1509"/>
+        </scene>
+        <!--用户列表-->
+        <scene sceneID="qfX-nt-XRK">
+            <objects>
+                <tableViewController id="32C-fu-Sb8" customClass="UsersList" customModule="F" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="vW6-R9-wQA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="sCX-le-F1t">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sCX-le-F1t" id="WCO-1O-Ae9">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="32C-fu-Sb8" id="eBi-2k-M6m"/>
+                            <outlet property="delegate" destination="32C-fu-Sb8" id="dzU-zZ-boo"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="用户列表" id="lTB-kP-kC9">
+                        <barButtonItem key="rightBarButtonItem" title="logout" id="SVg-qQ-3Lk">
+                            <connections>
+                                <action selector="taplogoutButton:" destination="32C-fu-Sb8" id="zCg-b1-5fU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x7I-fc-Q97" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="619" y="-699"/>
         </scene>
     </scenes>
 </document>
