change tabor icons; fix bugs;

--- a/F/F/Base.lproj/Main.storyboard
+++ b/F/F/Base.lproj/Main.storyboard
@@ -145,10 +145,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uBD-Y1-9Hh">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uBD-Y1-9Hh">
                                 <rect key="frame" x="20" y="129" width="397" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -204,7 +203,7 @@
                             <outlet property="delegate" destination="Wmm-Wb-Lem" id="7rx-aD-FqB"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Fluxes" id="FlV-uE-WQL"/>
+                    <tabBarItem key="tabBarItem" title="Fluxes" image="fluxes" id="FlV-uE-WQL"/>
                     <navigationItem key="navigationItem" title="Root View Controller" id="2dI-oR-LEi">
                         <barButtonItem key="leftBarButtonItem" title="Item" systemItem="refresh" id="7gX-CI-jce"/>
                         <barButtonItem key="rightBarButtonItem" title="New" id="zz6-jE-yjT">
@@ -273,7 +272,7 @@
             </objects>
             <point key="canvasLocation" x="-540" y="135"/>
         </scene>
-        <!--Me-->
+        <!--Settings-->
         <scene sceneID="YKA-Eg-eLC">
             <objects>
                 <tableViewController id="5gJ-d6-YcY" sceneMemberID="viewController">
@@ -296,7 +295,7 @@
                             <outlet property="delegate" destination="5gJ-d6-YcY" id="KLd-mL-wUX"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Me" id="WGu-dy-h6f"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="WGu-dy-h6f"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rcK-69-t1b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -705,7 +704,7 @@
                             <outlet property="delegate" destination="32C-fu-Sb8" id="dzU-zZ-boo"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Users" id="gP7-6Z-F5o"/>
+                    <tabBarItem key="tabBarItem" title="Users" image="users" id="gP7-6Z-F5o"/>
                     <navigationItem key="navigationItem" title="用户列表" id="lTB-kP-kC9">
                         <barButtonItem key="rightBarButtonItem" title="logout" id="SVg-qQ-3Lk">
                             <connections>
@@ -719,4 +718,9 @@
             <point key="canvasLocation" x="264" y="-555"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="fluxes" width="25" height="25"/>
+        <image name="settings" width="25" height="25"/>
+        <image name="users" width="25" height="25"/>
+    </resources>
 </document>
